--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,19 @@ body {
   flex-wrap: wrap;
   margin: 10px 10px;
 }
+
+.btn {
+  width: 60px;
+  height: 40px;
+  margin: 5px;
+  border: none;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+}
+
+.btn-next-pokemon {
+  background-color: yellow;
+}
+
+.btn-pokemon {
+  background-color: green;
+}
